feat: added GET and PATCH operation
